--- a/public/app/sass/pages/portfolio/_repository.sass
+++ b/public/app/sass/pages/portfolio/_repository.sass
@@ -19,6 +19,7 @@
 
     &:hover
       @extend %block-accent
+      background-color: $color-accent
       & + p
         @extend %opacity100
       h3, h4
